--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,66 @@
-.App {
-  text-align: center;
+.app {
+	text-align: center;
+	height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+
+.nav {
+	background: #282c34;
+	border-bottom: 2px solid grey;
+	position: fixed;
+	top: 0;
+	height: 50px;
+	width: 100%;
+	font-size: 1.5em;
+	z-index: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 8px 2em;
+	text-decoration: none;
+	
 }
 
-.App-link {
-  color: #61dafb;
+.nav a:hover {
+	background: #111;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.botao {
+	float: left;
+}
+
+.hamburger {
+	float: right;
+}
+
+.sidebar {
+	position: fixed;
+	border-right: 2px solid grey;
+	width: 18%;
+	font-size: 1.5em;
+	overflow-y: auto;
+	top: 0;
+	bottom: 0;
+	margin-top: 52px;
+	color: grey;
+	background: black;
+	z-index: 1; 
+}
+
+
+.mapa {
+	position: fixed;
+	margin-left: 18%;
+	margin-top: 52px;
+	overflow-y: hidden;
+	width: 82%;
+	top: 0;
+	bottom: 0;
+	background: #282c34;
+	color: white;
+	overflow: auto;
+	z-index: 0;
 }
