--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,24 @@
 	height: 100%;
 }
 
+.entrada-filtro {
+	text-align: center;
+	width: 100%;
+	padding: 10px 0;
+	color: grey;
+	background: #222;
+	font-size: 1em;
+	border: 0;
+	outline: none;
+}
+
+.botao-filtrar {
+	margin: 0;
+	background: none;
+	border: none;
+	width: 20%;
+	font-size: 1em;
+}
 
 .nav {
 	background: #282c34;
@@ -50,6 +68,19 @@
 	z-index: 1; 
 }
 
+.sidebar-inner {
+	margin: 0 10px;
+	padding: 5px 0;
+	border-bottom: 1px solid grey;
+}
+
+.sidebar-inner:last-child {
+	border-bottom: none;
+}
+
+.sidebar-toggle {
+	display: none;
+}
 
 .mapa {
 	position: fixed;
@@ -59,7 +90,18 @@
 	width: 82%;
 	top: 0;
 	bottom: 0;
-	background: #282c34;
+	color: white;
+	overflow: auto;
+	z-index: 0;
+}
+
+.mapa-toggle {
+	position: fixed;
+	margin-top: 52px;
+	overflow-y: hidden;
+	width: 100%;
+	top: 0;
+	bottom: 0;
 	color: white;
 	overflow: auto;
 	z-index: 0;
@@ -67,4 +109,63 @@
 
 #map {
 	height: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+	.sidebar {
+		width: 30%;
+	}
+
+	.mapa {
+		margin-left: 30%;
+		width: 69.9%;
+	}
+}
+
+@media screen and (max-width: 650px) {
+
+	.sidebar {
+		display: none;
+	}
+
+	.mapa {
+		margin-left: 0;
+		width: 100%;
+	}
+
+	.sidebar-toggle {
+		display: block;
+		position: fixed;
+		border-right: 2px solid grey;
+		font-size: 1.5em;
+		overflow-y: auto;
+		top: 0;
+		bottom: 0;
+		margin-top: 52px;
+		color: grey;
+		background: black;
+	z-index: 1;
+		width: 45%;
+	}
+
+	.mapa-toggle {
+		margin-left: 45%;
+		width: 54.9%;
+	}
+}
+
+@media screen and (max-width: 435px) {
+
+	.nav a {
+		padding: 8px 0.5em;
+	}
+
+	.sidebar-toggle {
+		width: 65%;
+	}
+
+	.mapa-toggle {
+		margin-left: 65%;
+		width: 44.9%;
+	}
 }
