--- a/src/App.css
+++ b/src/App.css
@@ -126,15 +126,15 @@
 	height: 500px;
 }
 
-.localEscolher {
+.local-escolher {
 	cursor: pointer;
 	-webkit-transition-duration: 0.4s; /* Safari */
 	transition-duration: 0.4s;
 	padding: 20px;
 }
 
-.localEscolher:hover {
-	background: rgba(0, 0, 0, 0.25);
+.local-escolher:hover {
+	background: rgba(0, 225, 0, 0.25);
 }
 
 .botao-apagar {
