feat: Adição de InfoWindow
Agora quando  o usuário clica no marcador, um infowindow será aberto, e caso o usuário deseja ver mais informações, ele deverá clicar no infowindow para abrir o modal.

--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,10 @@
 	width: 100%;
 }
 
+.infowindow {
+	color: black;
+}
+
 /* Botão para apagar o marcador */
 .botao-apagar {
 	background: #f44336;
