feat: Armazenamento de toda a informação retornada do Foursquare
Agora todo o array recebido dos detalhes do local do Foursquare é armazenado no estado, podendo só alterar quais informações desejadas a serem mostradas no modal ou infowindow.

--- a/src/App.css
+++ b/src/App.css
@@ -115,11 +115,25 @@
 
 /* Imagem que aparece no modal */
 .imagem {
-	width: 100%;
+	display: block;
+	margin:auto;
+	max-width: 100%;
+}
+
+.link {
+	color: #282c34;
 }
 
 .infowindow {
-	color: black;
+	color: #282c34;
+}
+
+.infowindow:hover {
+	cursor: pointer;
+}
+
+.imagem-infowindow {
+	height: 200px;
 }
 
 /* Botão para apagar o marcador */
@@ -154,7 +168,6 @@
 .local-escolher:hover {
 	background: rgba(0, 225, 0, 0.25);
 }
-
 
 
 @media screen and (max-width: 1200px) {
